--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blooger</title>
 
+    <!-- custom css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <!---------------- Navigation started----------------- -->
+
+    <div class="nav">
+        <div class="nav-menu flex-row">
+            <div class="nav-brand">
+                <a href="#" class="text-gray">Blooger</a>
+            </div>
+        </div>
+    </div>
 
 
+
+    <!---------------- Navigation End----------------- -->
+     
+    <!-- custom javaScript -->
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
