--- a/index.html
+++ b/index.html
@@ -18,6 +18,31 @@
             <div class="nav-brand">
                 <a href="#" class="text-gray">Blooger</a>
             </div>
+            <div>
+                <ul class="nav-items">
+                    <li class="nav-link">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Category</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Archive</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Pages</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="social text-gray">
+                <a href="#">F</a>
+                <a href="#">I</a>
+                <a href="#">T</a>
+                <a href="#">Y</a>
+            </div>
         </div>
     </div>
 
