--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- custom css -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/all.min.css">
 </head>
 
 <body>
@@ -38,10 +40,10 @@
                 </ul>
             </div>
             <div class="social text-gray">
-                <a href="#">F</a>
-                <a href="#">I</a>
-                <a href="#">T</a>
-                <a href="#">Y</a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
             </div>
         </div>
     </div>
