--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="nav-brand">
                 <a href="#" class="text-gray">Blooger</a>
             </div>
-             <div class="toggle-collpase">
+             <div class="toggle-collapse">
                 <div class="toggle-icons">
                     <i class="fas fa-bars"></i>
                 </div>
