Header top complete

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
 
     <!---------------- Navigation End----------------- -->
-     
+     <!-- jquery library -->
+     <script src="./js/jquery3.7.1.main.js"></script>
     <!-- custom javaScript -->
     <script src="./js/main.js"></script>
 </body>
