main site background image add

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div class="nav-brand">
                 <a href="#" class="text-gray">Blooger</a>
             </div>
-             <div class="toggle-collapse">
+            <div class="toggle-collapse">
                 <div class="toggle-icons">
                     <i class="fas fa-bars"></i>
                 </div>
-             </div>
+            </div>
             <div>
                 <ul class="nav-items">
                     <li class="nav-link">
@@ -53,11 +53,24 @@
         </div>
     </div>
 
-
-
     <!---------------- Navigation End----------------- -->
-     <!-- jquery library -->
-     <script src="./js/jquery3.7.1.main.js"></script>
+
+<!-- Main site Section started -->
+
+<main>
+    <section class="site-title">
+        <div class="site-background">
+            <h3>Tours & Travel</h3>
+            <h1>Amazing Place on Earth</h1>
+            <button class="btn">Explore</button>
+        </div>
+    </section>
+</main>
+<!-- Main site Section End -->
+
+
+    <!-- jquery library -->
+    <script src="./js/jquery3.7.1.main.js"></script>
     <!-- custom javaScript -->
     <script src="./js/main.js"></script>
 </body>
