Blog section started

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blooger</title>
 
-    <!-- custom css -->
+    <!-- Link css -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/all.css">
     <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
 </head>
 
 <body>
@@ -58,6 +60,8 @@
 <!-- Main site Section started -->
 
 <main>
+
+    <!-- site-title Started -->
     <section class="site-title">
         <div class="site-background">
             <h3>Tours & Travel</h3>
@@ -65,13 +69,35 @@
             <button class="btn">Explore</button>
         </div>
     </section>
+    <!-- site-title End -->
+<!-- Blog carousel started -->
+
+<section>
+    <div class="blog">
+        <div class="container">
+            <div class="owl-carousel owl-theme blog-post">
+                <div class="blog-content">
+                    <img src="./assets/Blog-post/post-1.jpg" alt="Post-1">
+                    <div class="blog-title">
+                        <h3>London Fashion week's continued the evolution</h3>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Blog carousel End -->
+
 </main>
 
 <!-- Main site Section End -->
 
 
-    <!-- jquery library -->
+    <!-- javaScript link -->
     <script src="./js/jquery3.7.1.main.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
     <!-- custom javaScript -->
     <script src="./js/main.js"></script>
 </body>
