--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                     <img src="./assets/Blog-post/post-1.jpg" alt="Post-1">
                     <div class="blog-title">
                         <h3>London Fashion week's continued the evolution</h3>
-                        
+                        <button class="btn">Fashion</button>
+                        <span>2 minutes</span>
                     </div>
                 </div>
             </div>
