--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
                     </div>
                 </div>
                 <div class="blog-content">
+                    <img src="./assets/Blog-post/post-4.png" alt="Post-1">
+                    <div class="blog-title">
+                        <h3>London Fashion week's continued the evolution</h3>
+                        <button class="btn btn-blog">Fashion</button>
+                        <span>2 minutes</span>
+                    </div>
+                </div>
+                <div class="blog-content">
                     <img src="./assets/Blog-post/post-5.png" alt="Post-1">
                     <div class="blog-title">
                         <h3>London Fashion week's continued the evolution</h3>
