Blooger Blog section fix

--- a/index.html
+++ b/index.html
@@ -57,79 +57,95 @@
 
     <!---------------- Navigation End----------------- -->
 
-<!-- Main site Section started -->
+    <!-- Main site Section started -->
 
-<main>
+    <main>
 
-    <!-- site-title Started -->
-    <section class="site-title">
-        <div class="site-background">
-            <h3>Tours & Travel</h3>
-            <h1>Amazing Place on Earth</h1>
-            <button class="btn">Explore</button>
-        </div>
-    </section>
-    <!-- site-title End -->
-<!-- Blog carousel started -->
+        <!-- site-title Started -->
+        <section class="site-title">
+            <div class="site-background">
+                <h3>Tours & Travel</h3>
+                <h1>Amazing Place on Earth</h1>
+                <button class="btn">Explore</button>
+            </div>
+        </section>
+        <!-- site-title End -->
+        <!-- Blog carousel started -->
 
-<section>
-    <div class="blog">
-        <div class="container">
-            <div class="owl-carousel owl-theme blog-post">
-                <div class="blog-content">
-                    <img src="./assets/Blog-post/post-1.jpg" alt="Post-1">
-                    <div class="blog-title">
-                        <h3>London Fashion week's continued the evolution</h3>
-                        <button class="btn btn-blog">Fashion</button>
-                        <span>2 minutes</span>
+        <section>
+            <div class="blog">
+                <div class="container">
+                    <div class="owl-carousel owl-theme blog-post">
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/post-1.jpg" alt="Post-1">
+                            <div class="blog-title">
+                                <h3>London Fashion week's continued the evolution</h3>
+                                <button class="btn btn-blog">Fashion</button>
+                                <span>2 minutes</span>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/post-3.jpg" alt="Post-1">
+                            <div class="blog-title">
+                                <h3>London Fashion week's continued the evolution</h3>
+                                <button class="btn btn-blog">Fashion</button>
+                                <span>2 minutes</span>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/post-2.jpg" alt="Post-1">
+                            <div class="blog-title">
+                                <h3>London Fashion week's continued the evolution</h3>
+                                <button class="btn btn-blog">Fashion</button>
+                                <span>2 minutes</span>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/post-4.png" alt="Post-1">
+                            <div class="blog-title">
+                                <h3>London Fashion week's continued the evolution</h3>
+                                <button class="btn btn-blog">Fashion</button>
+                                <span>2 minutes</span>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <img src="./assets/Blog-post/post-5.png" alt="Post-1">
+                            <div class="blog-title">
+                                <h3>London Fashion week's continued the evolution</h3>
+                                <button class="btn btn-blog">Fashion</button>
+                                <span>2 minutes</span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="blog-content">
-                    <img src="./assets/Blog-post/post-3.jpg" alt="Post-1">
-                    <div class="blog-title">
-                        <h3>London Fashion week's continued the evolution</h3>
-                        <button class="btn btn-blog">Fashion</button>
-                        <span>2 minutes</span>
-                    </div>
-                </div>
-                <div class="blog-content">
-                    <img src="./assets/Blog-post/post-2.jpg" alt="Post-1">
-                    <div class="blog-title">
-                        <h3>London Fashion week's continued the evolution</h3>
-                        <button class="btn btn-blog">Fashion</button>
-                        <span>2 minutes</span>
-                    </div>
-                </div>
-                <div class="blog-content">
-                    <img src="./assets/Blog-post/post-4.png" alt="Post-1">
-                    <div class="blog-title">
-                        <h3>London Fashion week's continued the evolution</h3>
-                        <button class="btn btn-blog">Fashion</button>
-                        <span>2 minutes</span>
-                    </div>
-                </div>
-                <div class="blog-content">
-                    <img src="./assets/Blog-post/post-5.png" alt="Post-1">
-                    <div class="blog-title">
-                        <h3>London Fashion week's continued the evolution</h3>
-                        <button class="btn btn-blog">Fashion</button>
-                        <span>2 minutes</span>
+                    <div class="owl-navigation">
+                        <span class="owl-nav-prev"><i class="fas fa-long-arrow-alt-left"></i></span>
+                        <span class="owl-nav-next"><i class="fas fa-long-arrow-alt-right"></i></span>
                     </div>
                 </div>
             </div>
-            <div class="owl-navigation">
-                <span class="owl-nav-prev"><i class="fas fa-long-arrow-alt-left"></i></span>
-                <span class="owl-nav-next"><i class="fas fa-long-arrow-alt-right"></i></span>
+        </section>
+
+        <!-- Blog carousel End -->
+
+
+        <!-- site content started -->
+
+        <section class="container">
+            <div class="site-content">
+                <div class="posts">
+                    <h1>Blog Posts</h1>
+                </div>
+                <aside class="Sidebar">
+                    <h1>Sidebar</h1>
+                </aside>
             </div>
-        </div>
-    </div>
-</section>
+        </section>
 
-<!-- Blog carousel End -->
+         <!-- site content End -->
 
-</main>
+    </main>
 
-<!-- Main site Section End -->
+    <!-- Main site Section End -->
 
 
     <!-- javaScript link -->
