--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Link css -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/all.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
