--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
                     </div>
                     <div class="pagination flex-row">
                         <a href="#"><i class="fas fa-chevron-left"></i></a>
-                        <a href="#">1</a>
-                        <a href="#">2</a>
-                        <a href="#">3</a>
+                        <a href="#" class="Pages">1</a>
+                        <a href="#" class="Pages">2</a>
+                        <a href="#" class="Pages">3</a>
                         <a href="#"><i class="fas fa-chevron-right"></i></a>
 
                     </div>
