Category section fix

--- a/index.html
+++ b/index.html
@@ -233,7 +233,14 @@
                     </div>
                 </div>
                 <aside class="Sidebar">
-                    <h1>Sidebar</h1>
+                    <div class="category">
+                        <h2>category</h2>
+                        <ul class="category-list">
+                            <li class="list-items">
+                                <a href="#">Softwere</a>
+                            </li>
+                        </ul>
+                    </div>
                 </aside>
             </div>
         </section>
