--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
                             <button class="btn form-btn">Subscribe</button>
                         </div>
                     </div>
-                    <div class="popuar-tags">
+                    <div class="popular-tags">
                         <h2>Popular Tags</h2>
-                        <div class="tags">
+                        <div class="tags flex-row">
                             <span class="tag">Softwere</span>
                             <span class="tag">Techonlogy</span>
                             <span class="tag">Travel</span>
