--- a/index.html
+++ b/index.html
@@ -362,9 +362,31 @@
 
         <!-- site content End -->
 
-    </main>
 
+    </main>
     <!-- Main site Section End -->
+
+
+    <!----- Footer started -------->
+
+    <Footer class="footer">
+        <div class="container">
+            <div class="about-us">
+                <h2>About</h2>
+            </div>
+            <div class="newsletters">
+                <h2>Newsletter</h2>
+            </div>
+            <div class="instagram">
+                <h2>Instagram</h2>
+            </div>
+            <div class="follow">
+                <h2>Follow Us</h2>
+            </div>
+        </div>
+    </Footer>
+
+     <!----- Footer End -------->
 
 
     <!-- javaScript link -->
