--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@
     <Footer class="footer">
         <div class="container">
             <div class="about-us">
-                <h2>About</h2>
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus tempora officiis expedita quam eius incidunt deleniti aliquam magni dolor totam?</p>
             </div>
             <div class="newsletters">
                 <h2>Newsletter</h2>
