footer form fix

--- a/index.html
+++ b/index.html
@@ -373,10 +373,15 @@
         <div class="container">
             <div class="about-us">
                 <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus tempora officiis expedita quam eius incidunt deleniti aliquam magni dolor totam?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus tempora officiis expedita quam eius
+                    incidunt deleniti aliquam magni dolor totam?</p>
             </div>
             <div class="newsletters">
                 <h2>Newsletter</h2>
+                <p>Stay update with our latest</p>
+                <div class="form-elements">
+                    <input type="text" placeholder="Email"><span><i class="fas fa-chevron-right"></i></span>
+                </div>
             </div>
             <div class="instagram">
                 <h2>Instagram</h2>
@@ -387,7 +392,7 @@
         </div>
     </Footer>
 
-     <!----- Footer End -------->
+    <!----- Footer End -------->
 
 
     <!-- javaScript link -->
