footer insta-img section add

--- a/index.html
+++ b/index.html
@@ -385,6 +385,16 @@
             </div>
             <div class="instagram">
                 <h2>Instagram</h2>
+                <div class="flex-row">
+                    <img src="./assets/instagram/thumb-card3.png" alt="insta">
+                    <img src="./assets/instagram/thumb-card4.png" alt="insta">
+                    <img src="./assets/instagram/thumb-card5.png" alt="insta">
+                </div>
+                <div class="flex-row">
+                    <img src="./assets/instagram/thumb-card6.png" alt="insta">
+                    <img src="./assets/instagram/thumb-card7.png" alt="insta">
+                    <img src="./assets/instagram/thumb-card8.png" alt="insta">
+                </div>
             </div>
             <div class="follow">
                 <h2>Follow Us</h2>
