Footer social add

--- a/index.html
+++ b/index.html
@@ -398,6 +398,13 @@
             </div>
             <div class="follow">
                 <h2>Follow Us</h2>
+                 <p>Let Us be Social</p>
+                 <div>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-youtube"></i>                          
+                 </div>
             </div>
         </div>
     </Footer>
