footer social complete

--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
                 <h2>Follow Us</h2>
                  <p>Let Us be Social</p>
                  <div>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-youtube"></i>                          
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>                            
                  </div>
             </div>
         </div>
