--- a/index.html
+++ b/index.html
@@ -407,6 +407,12 @@
                  </div>
             </div>
         </div>
+        <div class="rights flex-row">
+            <div class="text-gray">
+                Copyright ©2019 All rights reserved | made by
+                 <a href="#" target="_blank">Al-Muheetu Shihab<i class="fa-brands fa-facebook"></i></i></a>
+            </div>
+        </div>
     </Footer>
 
     <!----- Footer End -------->
