footer responsive fix

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                 <div>
                                     <img src="./assets/popular-post/m-blog-1.jpg" class="img" alt="">
                                 </div>
-                                <div class="post-info flex-row">
+                                <div class="post-info post-infos flex-row">
                                     <span><i class="fa-solid fa-calendar-days text-gray"></i>&nbsp;&nbsp;January
                                         21,2019</span>
                                     <span>5 Commets</span>
@@ -280,7 +280,7 @@
                                 <div>
                                     <img src="./assets/popular-post/m-blog-2.jpg" class="img" alt="">
                                 </div>
-                                <div class="post-info flex-row">
+                                <div class="post-info post-infos flex-row">
                                     <span><i class="fa-solid fa-calendar-days text-gray"></i>&nbsp;&nbsp;January
                                         21,2019</span>
                                     <span>5 Commets</span>
@@ -295,7 +295,7 @@
                                 <div>
                                     <img src="./assets/popular-post/m-blog-3.jpg" class="img" alt="">
                                 </div>
-                                <div class="post-info flex-row">
+                                <div class="post-info post-infos flex-row">
                                     <span><i class="fa-solid fa-calendar-days text-gray"></i>&nbsp;&nbsp;January
                                         21,2019</span>
                                     <span>5 Commets</span>
@@ -310,7 +310,7 @@
                                 <div>
                                     <img src="./assets/popular-post/m-blog-4.jpg" class="img" alt="">
                                 </div>
-                                <div class="post-info flex-row">
+                                <div class="post-info post-infos flex-row">
                                     <span><i class="fa-solid fa-calendar-days text-gray"></i>&nbsp;&nbsp;January
                                         21,2019</span>
                                     <span>5 Commets</span>
@@ -325,7 +325,7 @@
                                 <div>
                                     <img src="./assets/popular-post/m-blog-5.jpg" class="img" alt="">
                                 </div>
-                                <div class="post-info flex-row">
+                                <div class="post-info post-infos flex-row">
                                     <span><i class="fa-solid fa-calendar-days text-gray"></i>&nbsp;&nbsp;January
                                         21,2019</span>
                                     <span>5 Commets</span>
@@ -412,6 +412,9 @@
                 Copyright ©2019 All rights reserved | made by
                  <a href="#" target="_blank">Al-Muheetu Shihab<i class="fa-brands fa-facebook"></i></i></a>
             </div>
+        </div>
+        <div class="move-up">
+            <span><i class="fas fa-arrow-circle-up fa-2x"></i></span>
         </div>
     </Footer>
 
